--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         white-space: normal;
       }
 
-      .top-copy br{ display:none; } /* keep it as a clean two-ish line wrap instead of forced breaks */
+      .top-copy br{ display:none; } /* keep it as a clean wrap instead of forced breaks */
 
       .hero h1,
       .headline,
@@ -408,7 +408,7 @@
 
       <div class="top-inner">
         <img class="logo" src="assets/logo.png" alt="Page Turner Book Club logo" />
-        <p class="top-copy">Free books. Support authors.<br/>Fuel your next binge.</p>
+        <p class="top-copy">Free books. Support authors. <br/>Fuel your next binge.</p>
         <div class="top-spacer"></div>
       </div>
 
