--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
       color: var(--ink);
     }
 
+    /* Sentence splitting: desktop stays normal, mobile can force line breaks */
+    .top-copy .sentence{
+      display:inline;
+      white-space:nowrap;
+    }
+    .top-copy .sentence + .sentence:before{
+      content:" ";
+    }
+
     .top-spacer{ width: 132px; flex: 0 0 auto; }
 
     /* Hero */
@@ -361,20 +370,6 @@
 
     /* Mobile */
     @media (max-width: 600px){
-      /* ✅ FIX: stop the top tagline from breaking into single-word lines */
-      .top-copy{
-        font-size: 22px;
-        line-height: 1.25;
-        padding: 0 10px;
-        max-width: 320px;
-        margin: 0 auto;
-        word-break: normal;
-        overflow-wrap: normal;
-        white-space: normal;
-      }
-
-      .top-copy br{ display:none; } /* keep it as a clean wrap instead of forced breaks */
-
       .hero h1,
       .headline,
       .top-headline {
@@ -392,8 +387,28 @@
 
     @media (max-width: 520px){
       .logo{width: 118px}
-      .top-spacer{width: 118px}
-      .top-copy{font-size: 22px}
+      .top-spacer{ display:none; } /* key: stop squeezing the center text */
+      .top-inner{
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        gap: 10px;
+        padding: 14px 14px;
+      }
+      .top-copy{
+        font-size: 28px;
+        width: 100%;
+        max-width: 26ch;
+        line-height: 1.18;
+      }
+      .top-copy .sentence{
+        display:block;         /* only break after each period */
+        white-space:normal;
+      }
+      .top-copy .sentence + .sentence:before{
+        content:"";            /* remove the desktop spaces */
+      }
+
       .hero-h1{font-size: 44px}
       .genres{font-size: 18px}
       .hero{padding: 14px 14px 14px}
@@ -408,7 +423,9 @@
 
       <div class="top-inner">
         <img class="logo" src="assets/logo.png" alt="Page Turner Book Club logo" />
-        <p class="top-copy">Free books. Support authors. <br/>Fuel your next binge.</p>
+        <p class="top-copy">
+          <span class="sentence">Free books.</span><span class="sentence">Support authors.</span><span class="sentence">Fuel your next binge.</span>
+        </p>
         <div class="top-spacer"></div>
       </div>
 
