--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Page Turner Book Club — Free Books</title>
-  <meta name="description" content="Free books. Support authors. Fuel your next binge. Join Page Turner Book Club for weekly deals and author interviews." />
+  <meta name="description" content="Free books. Support authors. Find your next binge. Join Page Turner Book Club for weekly deals and author interviews." />
 
   <!-- Meta Pixel Code -->
   <script>
