--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+    <!-- Social Preview (Facebook / iMessage / etc.) -->
+  <meta property="og:title" content="Page Turner Book Club — Free Books" />
+  <meta property="og:description" content="Free books. Support authors. Fuel your next binge." />
+  <meta property="og:url" content="https://ptbookclub.github.io/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://ptbookclub.github.io/assets/ptbc-share.jpg" />
+  <meta property="og:image:width" content="1080" />
+  <meta property="og:image:height" content="1080" />
+
+  <!-- Twitter preview (also helps sometimes) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Page Turner Book Club — Free Books" />
+  <meta name="twitter:description" content="Free books. Support authors. Fuel your next binge." />
+  <meta name="twitter:image" content="https://ptbookclub.github.io/assets/ptbc-share.jpg" />
+
   <title>Page Turner Book Club — Free Books</title>
   <meta name="description" content="Free books. Support authors. Find your next binge. Join Page Turner Book Club for weekly deals and author interviews." />
 
