--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta property="og:url" content="https://ptbookclub.github.io/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://ptbookclub.github.io/assets/ptbc-share.jpg" />
+  <meta property="og:image:secure_url" content="https://ptbookclub.github.io/assets/ptbc-share.jpg" />
+
   <meta property="og:image:width" content="1080" />
   <meta property="og:image:height" content="1080" />
 
