--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <meta property="og:image:width" content="1080" />
   <meta property="og:image:height" content="1080" />
+  <meta property="fb:app_id" content="123456789012345" />
+
 
   <!-- Twitter preview (also helps sometimes) -->
   <meta name="twitter:card" content="summary_large_image" />
