--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -154,7 +154,7 @@
       border-top: 1px solid rgba(0,0,0,.08);
       background:
         linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.22) 40%, rgba(0,0,0,.55)),
-        url("assets/banner.jpg") center/cover no-repeat;
+        url("/assets/banner.jpg") center/cover no-repeat;
       padding: 18px 20px 18px;
     }
 
@@ -439,7 +439,7 @@
     <section class="top-band">
 
       <div class="top-inner">
-        <img class="logo" src="assets/logo.png" alt="Page Turner Book Club logo" />
+        <img class="logo" src="/assets/logo.png" alt="Page Turner Book Club logo" />
         <p class="top-copy">
           <span class="sentence">Free books.</span><span class="sentence">Support authors.</span><span class="sentence">Fuel your next binge.</span>
         </p>
@@ -562,4 +562,3 @@
   </div>
 </body>
 </html>
-
