--- a/paranormal/thank-you.html
+++ b/paranormal/thank-you.html
@@ -30,14 +30,11 @@
   <style>
     :root{
       --bg:#0b0f14;
-
       --paper:#efe6d8;
       --ink:#2b2620;
-
       --border: rgba(0,0,0,.14);
       --shadow: 0 22px 70px rgba(0,0,0,.55);
       --radius: 18px;
-
       --muted: rgba(43,38,32,.72);
     }
 
@@ -69,7 +66,7 @@
       border: 1px solid rgba(255,255,255,.08);
       background:
         linear-gradient(180deg, rgba(0,0,0,.58), rgba(0,0,0,.30) 40%, rgba(0,0,0,.66)),
-        url("assets/banner.jpg") center/cover no-repeat;
+        url("/assets/banner.jpg") center/cover no-repeat;
       padding: 22px 16px;
     }
 
@@ -222,7 +219,7 @@
   <main class="stage" aria-label="Thank you page">
     <section class="paper">
 
-      <img class="logo" src="assets/logo.png" alt="Page Turner Book Club logo" />
+      <img class="logo" src="/assets/logo.png" alt="Page Turner Book Club logo" />
 
       <h1>Check your inbox to get your bonus freebie.</h1>
       <p>You’re officially in the Page Turner Book Club.</p>
