--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -472,9 +472,12 @@
               <h2>Free Offers Every Month</h2>
 
               <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
-             <input type="hidden" name="redirect" value="https://ptbookclub.github.io/paranormal/thank-you.html" />
-
+                <input type="hidden" name="redirect" value="https://ptbookclub.github.io/paranormal/thank-you.html" />
                 <input type="hidden" name="source" value="PTBC Website" />
+
+                <!-- ONLY CHANGE: tell Google Script which freebie + subject to send -->
+                <input type="hidden" name="freebie" value="https://dl.bookfunnel.com/pyi5og1krr" />
+                <input type="hidden" name="campaign" value="Paranormal Bonus Freebie" />
 
                 <input name="first" type="text" placeholder="First Name" required />
                 <input name="last" type="text" placeholder="Last Name" required />
