--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -471,7 +471,7 @@
             <aside class="card" aria-label="Join the mailing list form">
               <h2>Free Offers Every Month</h2>
 
-              <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbz5dl2aK2cpidwbfpEPQG4Fw8Hp46CgLH2mhprQI3Rsanjc4kaA4RDsk2LmVx-N7DXcCA/exec">
+              <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
                 <input type="hidden" name="redirect" value="https://ptbookclub.github.io/paranormal/thank-you.html" />
                 <input type="hidden" name="source" value="PTBC Website" />
 
@@ -526,43 +526,4 @@
                   <option value="Other">Other</option>
                 </select>
 
-                <!-- Honeypot anti-bot field -->
-                <div class="hp-field" aria-hidden="true">
-                  <label>Leave this empty</label>
-                  <input type="text" name="company" tabindex="-1" autocomplete="off" />
-                </div>
-
-                <button type="submit">Join the Club</button>
-              </form>
-
-              <p class="note">No spam. Leave anytime.</p>
-            </aside>
-          </div>
-
-        </div>
-      </div>
-
-      <!-- Footer -->
-      <div class="bottom">
-        <p class="quote">“Remember, your reviews are the only applause writers ever get.”</p>
-        <p class="social-line">CLICK ICON TO FOLLOW FOR WEEKLY DEALS:</p>
-
-        <div class="icons">
-          <a class="icon-btn ig" href="https://www.instagram.com/pageturnerbc/?ref=ptbc" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-5 4a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.2-.9a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"/>
-            </svg>
-          </a>
-
-          <a class="icon-btn fb" href="https://www.facebook.com/PageTurnerBookClub?ref=ptbc" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M22 12a10 10 0 1 0-11.5 9.9v-7H8v-3h2.5V9.6c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5V12H17l-.4 3h-2.6v7A10 10 0 0 0 22 12z"/>
-            </svg>
-          </a>
-        </div>
-      </div>
-
-    </section>
-  </div>
-</body>
-</html>
+                <!-- Honeyp
