--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -475,7 +475,7 @@
                    If you deployed a separate Paranormal script, this action URL must be the PARANORMAL /exec link. -->
               <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
                 <input type="hidden" name="redirect" value="https://ptbookclub.github.io/paranormal/thank-you.html" />
-                <input type="hidden" name="source" value="PTBC Website" />
+                <input type="hidden" name="source" value="PTBC Paranormal" />
 
                 <!-- Your emailed bonus freebie for PARANORMAL -->
                 <input type="hidden" name="freebie" value="https://dl.bookfunnel.com/hklgwfy7h9" />
