--- a/index.html
+++ b/index.html
@@ -472,8 +472,10 @@
               <h2>Free Offers Every Month</h2>
 
               <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
-                <input type="hidden" name="redirect" value="https://ptbookclub.github.io/thank-you.html" />
-                <input type="hidden" name="source" value="PTBC Website" />
+            <input type="hidden" name="list" value="Mystery" />
+<input type="hidden" name="source" value="PTBC Mystery" />
+<input type="hidden" name="freebie" value="https://dl.bookfunnel.com/pyi5og1krr" />
+
 
                 <input name="first" type="text" placeholder="First Name" required />
                 <input name="last" type="text" placeholder="Last Name" required />
