--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -474,8 +474,10 @@
               <!-- IMPORTANT:
                    If you deployed a separate Paranormal script, this action URL must be the PARANORMAL /exec link. -->
               <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbz5dl2aK2cpidwbfpEPQG4Fw8Hp46CgLH2mhprQI3Rsanjc4kaA4RDsk2LmVx-N7DXcCA/exec">
-                <input type="hidden" name="redirect" value="https://ptbookclub.github.io/paranormal/thank-you.html" />
-                <input type="hidden" name="source" value="PTBC Paranormal" />
+          <input type="hidden" name="list" value="Paranormal" />
+<input type="hidden" name="source" value="PTBC Para" />
+<input type="hidden" name="freebie" value="https://dl.bookfunnel.com/hklgwfy7h9" />
+
 
                 <!-- Your emailed bonus freebie for PARANORMAL -->
                 <input type="hidden" name="freebie" value="https://dl.bookfunnel.com/hklgwfy7h9" />
