--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -471,17 +471,11 @@
             <aside class="card" aria-label="Join the mailing list form">
               <h2>Free Offers Every Month</h2>
 
-              <!-- IMPORTANT:
-                   If you deployed a separate Paranormal script, this action URL must be the PARANORMAL /exec link. -->
               <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbz5dl2aK2cpidwbfpEPQG4Fw8Hp46CgLH2mhprQI3Rsanjc4kaA4RDsk2LmVx-N7DXcCA/exec">
-          <input type="hidden" name="list" value="Paranormal" />
-<input type="hidden" name="source" value="PTBC Para" />
-<input type="hidden" name="freebie" value="https://dl.bookfunnel.com/hklgwfy7h9" />
-
-
-                <!-- Your emailed bonus freebie for PARANORMAL -->
+                <input type="hidden" name="redirect" value="https://ptbookclub.github.io/paranormal/thank-you.html" />
+                <input type="hidden" name="list" value="Paranormal" />
+                <input type="hidden" name="source" value="PTBC Para" />
                 <input type="hidden" name="freebie" value="https://dl.bookfunnel.com/hklgwfy7h9" />
-                <input type="hidden" name="campaign" value="Paranormal Bonus Freebie" />
 
                 <input name="first" type="text" placeholder="First Name" required />
                 <input name="last" type="text" placeholder="Last Name" required />
