--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
       <div class="top-inner">
         <img class="logo" src="assets/logo.png" alt="Page Turner Book Club logo" />
         <p class="top-copy">
-          <span class="sentence">Free books.</span><span class="sentence">Support authors.</span><span class="sentence">Fuel your next binge.</span>
+          <span class="sentence">Free books.</span><span class="sentence">Support authors.</span><span class="sentence">Find your next binge.</span>
         </p>
         <div class="top-spacer"></div>
       </div>
@@ -471,7 +471,7 @@
             <aside class="card" aria-label="Join the mailing list form">
               <h2>Free Offers Every Month</h2>
 
-              <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
+              <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbz0SZ0IwJtEOrj-0WBwgP0twl1sPZ_m_dXaTZpwtxgVpKcrHvWMLi1-4aXG_4_cvaCnug/exec">
                 <input type="hidden" name="redirect" value="https://ptbookclub.github.io/thank-you.html" />
                 <input type="hidden" name="list" value="Mystery" />
                 <input type="hidden" name="source" value="PTBC Mystery" />
