--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -441,7 +441,7 @@
       <div class="top-inner">
         <img class="logo" src="/assets/logo.png" alt="Page Turner Book Club logo" />
         <p class="top-copy">
-          <span class="sentence">Free books.</span><span class="sentence">Support authors.</span><span class="sentence">Fuel your next binge.</span>
+          <span class="sentence">Free books.</span><span class="sentence">Support authors.</span><span class="sentence">Find your next binge.</span>
         </p>
         <div class="top-spacer"></div>
       </div>
@@ -471,7 +471,7 @@
             <aside class="card" aria-label="Join the mailing list form">
               <h2>Free Offers Every Month</h2>
 
-              <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbz5dl2aK2cpidwbfpEPQG4Fw8Hp46CgLH2mhprQI3Rsanjc4kaA4RDsk2LmVx-N7DXcCA/exec">
+              <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwzxEFF6bpEeaVjBFKvnjsgOB7P7FB-8WOBbj1dit9bAbsW8t3Fp4c9bjp2tweMu4h5iw/exec">
                 <input type="hidden" name="redirect" value="https://ptbookclub.github.io/paranormal/thank-you.html" />
                 <input type="hidden" name="list" value="Paranormal" />
                 <input type="hidden" name="source" value="PTBC Para" />
