--- a/paranormal/index.html
+++ b/paranormal/index.html
@@ -139,9 +139,10 @@
 
     /* Sentence splitting: desktop stays normal, mobile can force line breaks */
     .top-copy .sentence{
-      display:inline;
-      white-space:nowrap;
-    }
+  display:inline;
+  white-space:normal;
+}
+
     .top-copy .sentence + .sentence:before{
       content:" ";
     }
