--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
     }
 
     /* Sentence splitting: desktop stays normal, mobile can force line breaks */
-    .top-copy .sentence{
-      display:inline;
-      white-space:nowrap;
-    }
+   .top-copy .sentence{
+  display:inline;
+  white-space:normal;
+}
+
     .top-copy .sentence + .sentence:before{
       content:" ";
     }
